ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploystrategy-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.weighted-routing: |
      {
        "Type": "forward",
        "ForwardConfig": {
          "TargetGroups": [
            {
              "ServiceName": "blue-service",
              "ServicePort": "80",
              "Weight": 70
            },
            {
              "ServiceName": "green-service",
              "ServicePort": "80",
              "Weight": 30
            }
          ]
        }
      }
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weighted-routing
                port:
                  name: use-annotation
